email address updated

--- a/web/public/500.html
+++ b/web/public/500.html
@@ -18,7 +18,7 @@
               flex-direction: column;
       -webkit-justify-content: center;
       -ms-flex-pack: justify;
-      justify-content: center;      
+      justify-content: center;
       margin: 0;
       font-family: "Helvetica Neue", Roboto, Arial, sans-serif;
     }
@@ -30,7 +30,7 @@
       margin: 0;
       font-weight: 900;
       line-height: 1em;
-      text-transform: uppercase;      
+      text-transform: uppercase;
       color: inherit;
     }
 
@@ -49,7 +49,7 @@
   <h3 class="logo"><a href="/">Innovative Pricing Solutions</a></h3>
   <div class="dialog">
     <h1>We're sorry, but something went wrong.</h1>
-    <p>If you keep getting this message, please call us on 1-866-402-6760 or send an email to <a href="mailto:info@pocketbookprotection.com">info@pocketbookprotection.com</a>.</p>
+    <p>If you keep getting this message, please call us on 1-866-402-6760 or send an email to <a href="mailto:info@innovativepricingsolutions.com">info@innovativepricingsolutions.com</a>.</p>
   </div>
 </body>
 </html>
