--- a/web/public/404.html
+++ b/web/public/404.html
@@ -18,7 +18,7 @@
               flex-direction: column;
       -webkit-justify-content: center;
       -ms-flex-pack: justify;
-      justify-content: center;      
+      justify-content: center;
       margin: 0;
       font-family: "Helvetica Neue", Roboto, Arial, sans-serif;
     }
@@ -30,7 +30,7 @@
       margin: 0;
       font-weight: 900;
       line-height: 1em;
-      text-transform: uppercase;      
+      text-transform: uppercase;
       color: inherit;
     }
 
@@ -50,7 +50,7 @@
   <div class="dialog">
     <div>
       <h1>The page you were looking for doesn't exist.</h1>
-      <p>You may have mistyped the address or the page may have moved. If you have any questions, please call us on 1-866-402-6760 or send an email to <a href="mailto:info@pocketbookprotection.com">info@pocketbookprotection.com</a>.</p>
+      <p>You may have mistyped the address or the page may have moved. If you have any questions, please call us on 1-866-402-6760 or send an email to <a href="mailto:info@innovativepricingsolutions.com">info@innovativepricingsolutions.com</a>.</p>
     </div>
   </div>
 </body>
