phone number removed

--- a/web/public/500.html
+++ b/web/public/500.html
@@ -49,7 +49,7 @@
   <h3 class="logo"><a href="/">Innovative Pricing Solutions</a></h3>
   <div class="dialog">
     <h1>We're sorry, but something went wrong.</h1>
-    <p>If you keep getting this message, please call us on 1-866-402-6760 or send an email to <a href="mailto:info@innovativepricingsolutions.com">info@innovativepricingsolutions.com</a>.</p>
+    <p>If you keep getting this message, please send us an email to <a href="mailto:info@innovativepricingsolutions.com">info@innovativepricingsolutions.com</a>.</p>
   </div>
 </body>
 </html>
