--- a/web/public/404.html
+++ b/web/public/404.html
@@ -50,7 +50,7 @@
   <div class="dialog">
     <div>
       <h1>The page you were looking for doesn't exist.</h1>
-      <p>You may have mistyped the address or the page may have moved. If you have any questions, please call us on 1-866-402-6760 or send an email to <a href="mailto:info@innovativepricingsolutions.com">info@innovativepricingsolutions.com</a>.</p>
+      <p>You may have mistyped the address or the page may have moved. If you have any questions, please send us an email to <a href="mailto:info@innovativepricingsolutions.com">info@innovativepricingsolutions.com</a>.</p>
     </div>
   </div>
 </body>
